--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">examen_NereaZJ_PMDM</string>
+
+    <!--MENU PRINCIPAL-->
+
+    <string name="crono">Cronómetro</string>
+    <string name="salir">Salir</string>
+
+    <!--Contador-->
+    <string name="PLAY">Play</string>
+    <string name="record">RECORD</string>
+    <string name="pausar">Pausar</string>
 </resources>
